--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,7 +1,7 @@
 {
     "python.linting.pylintEnabled": false,
-    "python.linting.enabled": true,
+    "python.linting.enabled": false,
     "python.linting.flake8Enabled": false,
     "python.linting.pycodestyleEnabled": true,
-    "python.pythonPath": "C:\\Users\\monte\\AppData\\Local\\Programs\\Python\\Python37\\python.exe"
+    "python.pythonPath": "/usr/local/opt/python/bin/python3.7"
 }
