--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,5 +3,5 @@
     "python.linting.enabled": false,
     "python.linting.flake8Enabled": false,
     "python.linting.pycodestyleEnabled": true,
-    "python.pythonPath": "/usr/local/opt/python/bin/python3.7"
+    "python.pythonPath": "C:\\Users\\monte\\AppData\\Local\\Programs\\Python\\Python37\\python.exe"
 }
