--- a/Pipfile
+++ b/Pipfile
@@ -11,6 +11,7 @@ psycopg2 = "==2.8.4"
 django-crispy-forms = "==1.9.0"
 django-allauth = "==0.42.0"
 pillow = "==7.1.2"
+django-embed-video = "==1.2.0"
 
 [requires]
 python_version = "3.7"
